# natsomatch

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.rst  build-docker.sh  nats2jetstream.py
benches/: bogus.rs  nats_utils.rs  payload_parser.rs
contrib/: natsomatch-state.py
doc/: kubernetes.yaml
lib/: Makefile
lib/json/: Cargo.toml  Makefile  README.rst
lib/json/benches/: payload_parser.rs
lib/json/src/: lib.rs  payload_parser.rs
lib/match/: Cargo.toml  Makefile  README.rst
lib/match/benches/: log_matcher.rs
lib/match/src/: lib.rs  log_matcher.rs
poc/: README.rst  nats2jetstream.py
src/: config_parser.rs  healthz.rs  inputs.rs  lib.rs  main.rs  misc_nats.rs  payload_parser.rs  sinks.rs  stats.rs
