#cargo-features = ["edition2024"]

[package]
name = "nats2jetstream"
edition = "2021"
version = "0.1.0"
#authors = ["Alice <a@example.com>", "Bob <b@example.com>"]

# https://github.com/johnthagen/min-sized-rust
# cargo build            # (7M)
# cargo build --release  # (4M, or 300K after strip=true)
[profile.release]
strip = true        # Automatically strip symbols from the binary
#opt-level = "z"    # Optimize for size?
lto = true	    # Enable Link Time Optimization (LTO)
codegen-units = 1   # Serial build. Slow, but better opt
panic = "abort"    # No debug stacktrace awesomeness?

[[bench]]
name = "payload_parser"

[dev-dependencies]
criterion = "0.5"

[dependencies]
async-nats = "0.33"
bytes = "1"
git-version = "0.3"
futures = "0.3"
serde_json = "1"
toml = "0.8"
tokio = {version = "1.36", features = ["full"]}
