#cargo-features = ["edition2024"]

[package]
name = "natsomatch"
edition = "2021"
version = "0.3.0"
#authors = ["Alice <a@example.com>", "Bob <b@example.com>"]

# https://github.com/johnthagen/min-sized-rust
# cargo build            # (7M)
# cargo build --release  # (4M, or 300K after strip=true)
[profile.release]
strip = true        # Automatically strip symbols from the binary
#opt-level = "z"    # Optimize for size?
#DISABLED_FOR_FASTER_BUILD#lto = true           # Enable Link Time Optimization (LTO)
#DISABLED_FOR_FASTER_BUILD#codegen-units = 1    # Serial build. Slow, but better opt
#panic = "abort"    # No debug stacktrace awesomeness?

[features]
version-from-env = []

[[bench]]
name = "bogus"
harness = false

[dev-dependencies]
criterion = "0.5"

[dependencies]
natsomatch-json = { path = "lib/json" }
natsomatch-match = { path = "lib/match" }

async-nats = "0.33"
bytes = "1"
git-version = "0.3"
futures = "0.3"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
toml = "0.8"
tokio = { version = "1.36", features = ["full"] }
