#cargo-features = ["edition2024"]

[package]
name = "nats2jetstream-json"
edition = "2021"
version = "0.1.3"
#authors = ["Alice <a@example.com>", "Bob <b@example.com>"]

# https://github.com/johnthagen/min-sized-rust
# cargo build            # (7M)
# cargo build --release  # (4M, or 300K after strip=true)
[profile.release]
strip = true        # Automatically strip symbols from the binary
#opt-level = "z"    # Optimize for size?
lto = true          # Enable Link Time Optimization (LTO)
codegen-units = 1   # Serial build. Slow, but better opt
#panic = "abort"    # No debug stacktrace awesomeness?

[features]
benchmark = ["dep:serde_json"]

[[bench]]
name = "payload_parser"
harness = false

[dev-dependencies]
criterion = "0.5"

[dependencies]
# This is only enabled when you provide --features benchmark.
serde_json = { version = "1", optional = true }
